styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

nav {
    background-color: steelblue;
    padding: 10px;
}

nav a {
    color: white;
    display: block;
    padding: 20px;
}

h1 {
    color: steelblue;
}

aside h2 {
    position: absolute;
    top: 30px;
    left: 100px;
}

main img {
    width: 150px;
    height: auto;
    border: 1px solid steelblue;
    padding: 2px;
    box-shadow: 0 0 30px gray;
    float: right;
}

p {
    padding: 0;
}

main {
    max-width: 840px;
}

aside {
    width: 20em;
    text-align: center;
    position: relative;
}

aside img {
    width: 200px;
    height: auto;
}

footer {
    margin-top: 1em;
    border-top: 2px solid black;
    text-align: center;
}

/* Class Selectors */
.box {
    margin: 1rem;
    border: 1px solid black;
    padding: 1rem;
    background-color: azure;
    color: black;
}

